backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: said-dev
  labels:
    app: backend
spec:
  replicas: 2 #create 2 pods
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: regcred #secret to pull image
      containers:
        - name: backend
          image: ghcr.io/saidalhendi/backend:v0.0.1 #github image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
