ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: said-ingress
  namespace: said-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: said.praxis-form.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
  tls:
    - hosts:
        - said.praxis-form.de
      secretName: said-praxis-form-tls
